# development secrets can go in default properties

--- a/default.properties
+++ b/default.properties
@@ -1,2 +1,12 @@
+
+AUTH0_DOMAIN=dev-9deub659.us.auth0.com
+AUTH0_AUDIENCE=api://localhost
+
 DB_ENGINE=django.db.backends.postgresql
 DB_PORT=5432
+DB_HOST=localhost
+DB_NAME=cmx_capstone_app
+DB_USER=cmx_capstone_app_admin_role
+DB_PASSWORD=password
+
+SECRET_KEY=a_bunch_of_nonsense
