# trying to fix ci

--- a/test.properties
+++ b/test.properties
@@ -3,4 +3,5 @@ DB_NAME=testdb
 DB_USER=testuser
 DB_PASSWORD=testpassword
 SECRET_KEY=a_bunch_of_nonsense
-AWS_S3_ENVIRONMENT=test
+AWS_ENVIRONMENT=test
+AWS_REGION=test
